[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/MenuPrincipal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Actors/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sprites/stone.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/lava.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 16 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="BackgroundCanvas" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" parent="BackgroundCanvas" instance=ExtResource( 4 )]
__meta__ = {
"_edit_lock_": true
}

[node name="UICanvas" type="CanvasLayer" parent="."]
layer = 2

[node name="UI" parent="UICanvas" instance=ExtResource( 1 )]
__meta__ = {
"_edit_lock_": true
}

[node name="MenuPrincipalCanvas" type="CanvasLayer" parent="."]
layer = 3
visible = false

[node name="MenuPrincipal" parent="MenuPrincipalCanvas" instance=ExtResource( 2 )]

[node name="Floor" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="FloorSprite" type="Sprite" parent="Floor"]
position = Vector2( 0, 480 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2048, 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="FloorCollision" type="CollisionShape2D" parent="Floor"]
position = Vector2( 512, 512 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 512, 432 )
scale = Vector2( 0.6, 0.6 )

[node name="LavaArea" type="Area2D" parent="."]
position = Vector2( 0, 568 )

[node name="LavaVisual" type="Sprite" parent="LavaArea"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2048, 64 )

[node name="LavaShape" type="CollisionShape2D" parent="LavaArea"]
physics_interpolation_mode = 1
position = Vector2( 512, 16 )
shape = SubResource( 2 )

[connection signal="body_entered" from="LavaArea" to="." method="_on_LavaArea_body_entered"]
